plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'umc.GrowIT'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Basic
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Database
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.31'

	// Mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// String Utils (문자열 유틸, 랜덤 문자열 생성)
	implementation 'org.apache.commons:commons-lang3:3.12.0'

	// S3
	implementation platform("software.amazon.awssdk:bom:2.25.0")
	implementation "software.amazon.awssdk:s3"
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.767' // sdk 버전에 의해 deprecated 확인 필요
	implementation 'software.amazon.awssdk:s3control:2.27.3'
	implementation 'software.amazon.awssdk:s3outposts:2.27.3'

	// WebClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Spring Actuator (모니터링 지표 수집)
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Prometheus
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'io.prometheus:prometheus-metrics-core:1.2.1'
}

task copyPrivateYml(type: Copy) {
	copy {
		from './config'
		include "*.yml"
		into 'src/main/resources'
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
